<resources>
    <string name="app_name">Trees</string>
    <string name="titleInfoWindow" />
    <string name="catch_trees">Catch Trees</string>
    <string name="treedex">treeDex</string>
    <string name="trees_found">Trees Found</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tillbaka">Tillbaka</string>
    <string name="n_sta">Nästa</string>
    <string name="hittade_tr_d">Hittade Träd</string>
    <string name="tr_d_kvar">Träd Kvar</string>
    <string name="inst_llningar">Inställningar</string>
    <string name="radie">Radie:</string>
    <string name="antal_tr_d">Antal träd:</string>
    <string name="v_lj">Välj</string>
    <string name="hj_lp">Hjälp</string>
    <string name="f_nga_tr_d">Fånga Träd</string>
    <string name="din_position">Din Position</string>
    <string name="f_ngat_tr_d">Fångat Träd</string>
    <string name="icke_f_ngat_tr_d">Icke-fångat Träd</string>
    <string name="klicka_f_r_att_f_nga_tr_d">Klicka för att fånga träd</string>
    <string name="statistik_f_r_f_ngade_tr_d">Statistik för fångade träd</string>
    <string name="awards">Awards</string>
    <string name="hitta_10_tr_d">Hitta 10 träd</string>
    <string name="hitta_100_tr_d">Hitta 100 träd</string>
    <string name="hitta_500_tr_d">Hitta 500 träd</string>
    <string name="hitta_1000_tr_d">Hitta 1000 träd</string>
    <string name="hitta_2500_tr_d">Hitta 2500 träd</string>
    <string name="hitta_5000_tr_d">Hitta 5000 träd</string>
    <string name="hitta_10000_tr_d">Hitta 10000 träd</string>
    <string name="hitta_20000_tr_d">Hitta 20000 träd</string>
    <string name="hitta_alla_tr_d">Hitta alla träd</string>
</resources>